--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 <ul class="comand-soc-list list">
                                     <li class="comand-soc-item ">
                                         <a href="" class="comand-soc-link">
-                                            <svg class="comand-soc-icon" width="20px"; height="20px" ;> 
+                                            <svg class="comand-soc-icon" width="20"; height="20" ;> 
                                                  <use  href="./image/icons.svg/symbol-defs.svg#icon-instagram" >
                                                  </use>
                                             </svg>   
