--- a/portfolio.html
+++ b/portfolio.html
@@ -131,7 +131,8 @@
        
     </main>
    <!--Подвал страницы-->
-   <footer class="footer-effect">
+   <footer class="footer">
+
     <div class="container">
          <div class="footer-left">
             <a class="logo-foot" href="/" >Web<Span class="logo-thre">Studio</Span></a>
@@ -144,8 +145,35 @@
                  </ul>
              </address> 
          </div>
-     </div>
- </footer>
+         <div class="footer-right">
+             <h3 class="footer-title">ПРИСОДИНЯЙТЕСЬ</h3>
+             <ul class="footer-soc-list list">
+                 <li class="footer-soc-link">
+                     <svg class="footer-soc-icon" width="20" heght="20">
+                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                     </svg>
+                 </li>
+                 <li class="footer-soc-link">
+                     <svg class="footer-soc-icon" width="20" heght="20">
+                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                     </svg>
+                 </li>
+                 <li class="footer-soc-link">
+                     <svg class="footer-soc-icon" width="20" heght="20">
+                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                     </svg>
+                 </li>
+                 <li class="footer-soc-link">
+                     <svg class="footer-soc-icon" width="20" heght="20">
+                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
+                     </svg>
+                 </li>
 
+             </ul>
+             
+         </div>
+    </div>
+   
+ </footer>
 </body>
 </html>
