--- a/index.html
+++ b/index.html
@@ -345,22 +345,22 @@
                 <h3 class="footer-title">ПРИСОДИНЯЙТЕСЬ</h3>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-link">
-                        <svg class="footer-soc-icon" width="20" heght="20">
+                        <svg class="footer-soc-icon" width="20" height="20">
                             <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
                     <li class="footer-soc-link">
-                        <svg class="footer-soc-icon" width="20" heght="20">
+                        <svg class="footer-soc-icon" width="20" height="20">
                             <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
                     <li class="footer-soc-link">
-                        <svg class="footer-soc-icon" width="20" heght="20">
+                        <svg class="footer-soc-icon" width="20" height="20">
                             <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
                     <li class="footer-soc-link">
-                        <svg class="footer-soc-icon" width="20" heght="20">
+                        <svg class="footer-soc-icon" width="20" height="20">
                             <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                         </svg>
                     </li>
