--- a/portfolio.html
+++ b/portfolio.html
@@ -62,76 +62,85 @@
             <!--Примеры и проекты-->
                 <ul class="portfolio list">
                     <li class="item-potfolio">
-                        <a href="/"> </a>
-                         <img class="img-portf" src="./image/img_ht2_1.jpg"  alt="Технокряк" width="370" height="294">
-                         <div class="text-div">
-                            <h2 class="name-work">Технокряк</h2>
-                            <p class="name-add">Веб-сайт </p> 
-                         </div>
+                        <a href="/"> 
+                            <img class="img-portf" src="./image/img_ht2_1.jpg"  alt="Технокряк" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Технокряк</h2>
+                                <p class="name-add">Веб-сайт </p> 
+                            </div>
+                        </a>
                     </li>
                     <li class="item-potfolio">
-                        <a href=""> </a>
-                         <img class="img-portf" src="./image/img_ht2_2.jpg "  alt="Постер New Orlean vs Golden Star" width="370" height="294">
-                         <div class="text-div">
-                            <h2 class="name-work">Постер New Orlean vs Golden Star</h2>
-                            <p class="name-add">Дизайн</p>
-                         </div>
+                        <a href=""> 
+                            <img class="img-portf" src="./image/img_ht2_2.jpg "  alt="Постер New Orlean vs Golden Star" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Постер New Orlean vs Golden Star</h2>
+                                <p class="name-add">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item-potfolio">
-                        <a href=""> </a>
-                        <img class="img-portf" src="./image/img_ht2_3.jpg"  alt="Ресторан Seafood" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Ресторан Seafood</h2>
-                            <p class="name-add">Приложение</p>
+                        <a href=""> 
+                            <img class="img-portf" src="./image/img_ht2_3.jpg"  alt="Ресторан Seafood" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Ресторан Seafood</h2>
+                                <p class="name-add">Приложение</p>
+                            </div>
+                    </a>
+                    </li>
+                    <li class="item-potfolio">
+                        <a href="">   
+                            <img class="img-portf" src="./image/img_ht2_4.jpg"  alt="Проект Prime" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Проект Prime</h2>
+                                <p class="name-add">Маркетинг</p> 
+                            </div>
+                        </a>
+                    </li>
+                    <li class="item-potfolio">
+                        <a href=""> 
+                            <img class="img-portf" src="./image/img_ht2_5.jpg"  alt="Проект Boxes" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Проект Boxes</h2>
+                                <p class="name-add">Приложение</p> 
+                            </div>
+                    </a>
+                    </li>
+                    <li class="item-potfolio">
+                        <a href="">   
+                            <img class="img-portf" src="./image/img_ht2_6.jpg"  alt="Inspiration has no Borders" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Inspiration has no Borders</h2>
+                                <p class="name-add">Веб-сайт</p> 
                         </div>
+                    </a>
                     </li>
                     <li class="item-potfolio">
-                        <a href="">   </a>
-                        <img class="img-portf" src="./image/img_ht2_4.jpg"  alt="Проект Prime" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Проект Prime</h2>
-                            <p class="name-add">Маркетинг</p> 
-                        </div>
+                        <a href="">  
+                            <img class="img-portf" src="./image/img_ht2_7.jpg"  alt="Издание Limited Edition" width="370" height="294">
+                            <div class="text-div">
+                                <h2 class="name-work">Издание Limited Edition</h2>
+                                <p class="name-add">Дизайн</p>
+                            </div>
+                        </a>
                     </li>
                     <li class="item-potfolio">
-                        <a href="">  </a>
-                        <img class="img-portf" src="./image/img_ht2_5.jpg"  alt="Проект Boxes" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Проект Boxes</h2>
-                            <p class="name-add">Приложение</p> 
-                        </div>
-                    </li>
-                    <li class="item-potfolio">
-                        <a href="">   </a>
-                        <img class="img-portf" src="./image/img_ht2_6.jpg"  alt="Inspiration has no Borders" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Inspiration has no Borders</h2>
-                            <p class="name-add">Веб-сайт</p> 
-                        </div>
-                    </li>
-                    <li class="item-potfolio">
-                        <a href="">   </a>
-                        <img class="img-portf" src="./image/img_ht2_7.jpg"  alt="Издание Limited Edition" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Издание Limited Edition</h2>
-                            <p class="name-add">Дизайн</p>
-                        </div>
-                    </li>
-                    <li class="item-potfolio">
-                        <a href="">   </a>
+                        <a href="">  
                         <img class="img-portf" src="./image/img_ht2_8.jpg"  alt="Проект LAB" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Проект LAB</h2>
-                            <p class="name-add">Маркетинг</p> 
-                        </div>
+                            <div class="text-div">
+                                <h2 class="name-work">Проект LAB</h2>
+                                <p class="name-add">Маркетинг</p> 
+                            </div>
+                        </a>
                     </li>
                     <li class="item-potfolio">
-                        <a href="">   </a>
-                        <img class="img-portf" src="./image/img_ht2_9.jpg"  alt="Growing Business" width="370" height="294">
-                        <div class="text-div">
-                            <h2 class="name-work">Growing Business</h2>
-                            <p class="name-add">Приложение</p> 
+                        <a href="">   
+                            <img class="img-portf" src="./image/img_ht2_9.jpg"  alt="Growing Business" width="370" height="294">
+                                <div class="text-div">
+                                <h2 class="name-work">Growing Business</h2>
+                                <p class="name-add">Приложение</p> 
                         </div>
+                    </a>
                     </li>
                 </ul>
             </div>
