--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                 </address> 
             </div>
             <div class="footer-right">
-                <h3 class="footer-title">ПРИСОДИНЯЙТЕСЬ</h3>
+                <p class="footer-title">ПРИСОДИНЯЙТЕСЬ</p>
                 <ul class="footer-soc-list list">
                     <li class="footer-soc-link">
                         <svg class="footer-soc-icon" width="20" height="20">
