--- a/index.html
+++ b/index.html
@@ -117,31 +117,31 @@
                                 <h3 class="comand-name" >Игорь Демьяненко</h3>
                                 <p class="comand-position">Product Designer</p>
                                 <ul class="team-soc-list list">
-                                    <li class="team-soc-link">
-                                        <a href="">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link">
                                             <svg class="team-soc-icon" width="20" height="20">
                                             <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-soc-link">
-                                        <a href="">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link">
                                             <svg class="team-soc-icon" width="20" height="20">
-                                            <use href="./image/icons.svg/symbol-defs.svg#icon-twitter"></use>
+                                                <use href="./image/icons.svg/symbol-defs.svg#icon-twitter"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-soc-link">
-                                        <a href="">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link">
                                             <svg class="team-soc-icon" width="20" height="20">
-                                            <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
+                                                <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
                                             </svg>
                                         </a>
                                     </li>
-                                    <li class="team-soc-link">
-                                        <a href="">
+                                    <li class="team-soc-item">
+                                        <a href="" class="team-soc-link">
                                             <svg class="team-soc-icon" width="20" height="20">
-                                            <use href="./image/icons.svg/symbol-defs.svg#icon-linkedin"></use>
+                                                <use href="./image/icons.svg/symbol-defs.svg#icon-linkedin"></use>
                                             </svg>
                                         </a>
                                     </li>
@@ -155,27 +155,29 @@
                             <h3 class="comand-name">Ольга Репина</h3>
                             <p class="comand-position">Frontend Developer</p> 
                             <ul class="team-soc-list list">
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>    
                                 </li>
-                                <li class="team-soc-link">
-                                    <svg class="team-soc-icon" width="20" height="20">
-                                        <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
+                                <li class="team-soc-item">
+                                    <a href=""class="team-soc-link">
+                                        <svg class="team-soc-icon" width="20" height="20">
+                                           <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
                                     </svg>
+                                </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -190,29 +192,29 @@
                             <h3 class="comand-name">Николай Тарасов</h3>
                             <p class="comand-position">Marketing</p> 
                             <ul class="team-soc-list list">
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
                                         </svg>
                                     </a>    
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -227,29 +229,29 @@
                             <h3 class="comand-name">Михаил Ермаков</h3>
                             <p class="comand-position">UI Designer</p>
                             <ul class="team-soc-list list">
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-instagram"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-twitter"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-fb"></use>
                                         </svg>
                                     </a>
                                 </li>
-                                <li class="team-soc-link">
-                                    <a href="">
+                                <li class="team-soc-item">
+                                    <a href="" class="team-soc-link">
                                         <svg class="team-soc-icon" width="20" height="20">
                                         <use href="./image/icons.svg/symbol-defs.svg#icon-linkedin"></use>
                                         </svg>
@@ -289,8 +291,6 @@
                             </svg> 
                         </a>
                     </li>
-
-
                     <li class="client-item"> 
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
