--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="cont">
                         <a href="mailto:info@devstudio.com" class="col cont-link">
                              <svg class="cont-icon"  width="16" height="12">
-                                <use href="./image/icons.svg/symbol-defs.svg#icon-mail"></use></svg>
+                                <use href="./image/icons.svg/symbol-defs.svg#icon-envelope"></use></svg>
                                 info@devstudio.com</a></li>
                             
                     <li class="cont"><a href="tel:+380961111111" class=" col cont-link">
@@ -59,7 +59,7 @@
                         <li class="aside-item">
                             <div class="aside-icon">
                                   <svg width="65" height="70">
-                                  <use href="./image/icons.svg/symbol-defs.svg#icon-antena"></use>
+                                  <use href="./image/icons.svg/symbol-defs.svg#icon-antenna"></use>
                                 </svg>
                               </div>
                             <h3 class="type-name">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
@@ -272,14 +272,14 @@
                     <li class="client-item">
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo1" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo" ></use>
                             </svg> 
                         </a>
                     </li>
                     <li class="client-item"> 
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo2" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo-1" ></use>
                             </svg> 
                         </a>
                     </li>
@@ -287,28 +287,28 @@
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
                  
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo3" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo-2" ></use>
                             </svg> 
                         </a>
                     </li>
                     <li class="client-item"> 
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo4" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo-3" ></use>
                             </svg> 
                         </a>
                     </li>
                     <li class="client-item"> 
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo5" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo-4" ></use>
                             </svg> 
                         </a>
                     </li>
                     <li class="client-item"> 
                         <a href="" class="client-link ">
                             <svg class="client-item-icon" width="106" height="60"> 
-                                <use  href="./image/icons.svg/symbol-defs.svg#icon-logo6" ></use>
+                                <use  href="./image/icons.svg/symbol-defs.svg#icon-Logo-5" ></use>
                             </svg> 
                         </a>
                     </li>
